<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_fondo"
    tools:context=".Registros.RegistroUsuariosActivity">

    <TextView
        android:id="@+id/tv_RegistroUTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/cinzel_font"
        android:text="@string/RegistroU_Titulo"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_NombreUsuario"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:fontFamily="@font/jackinpunt"
        android:hint="@string/RegistroU_Hint_Nombre"
        android:inputType="text"
        android:textColor="@color/azulClaro"
        android:textColorHint="#e0e0e0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_RegistroUTitulo" />

    <EditText
        android:id="@+id/et_ApellidosUsuario"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/jackinpunt"
        android:hint="@string/RegistroU_Hint_Apellidos"
        android:inputType="text"
        android:textColor="@color/azulClaro"
        android:textColorHint="#e0e0e0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_NombreUsuario" />

    <EditText
        android:id="@+id/et_DniNieUsuario"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/jackinpunt"
        android:hint="@string/RegistroU_Hint_DNI"
        android:inputType="text"
        android:textColor="@color/azulClaro"
        android:textColorHint="#e0e0e0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ApellidosUsuario" />

    <EditText
        android:id="@+id/et_TelfUsuario"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/jackinpunt"
        android:hint="@string/RegistroU_Hint_Telf"
        android:inputType="phone"
        android:textColor="@color/azulClaro"
        android:textColorHint="#e0e0e0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_DniNieUsuario" />

    <EditText
        android:id="@+id/et_passUsuario"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/jackinpunt"
        android:hint="@string/RegistroU_Hint_Pass"
        android:inputType="textPassword"
        android:textColor="@color/azulClaro"
        android:textColorHint="#e0e0e0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_TelfUsuario" />

    <EditText
        android:id="@+id/et_repPassUsuario"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/jackinpunt"
        android:hint="@string/RegistroU_Hint_RepPass"
        android:inputType="textPassword"
        android:textColor="@color/azulClaro"
        android:textColorHint="#e0e0e0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passUsuario" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#4a9d9c"
        android:fontFamily="@font/cinzel_font"
        android:onClick="registrarUsuario"
        android:text="@string/RegistroU_BtRegistro"
        android:textColor="#afffff"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repPassUsuario" />

</androidx.constraintlayout.widget.ConstraintLayout>