<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_fondo">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_ajustes" />

    <EditText
        android:id="@+id/et_NombreUsuarioMod"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:fontFamily="@font/jackinpunt"
        android:hint="@string/RegistroU_Hint_Nombre"
        android:inputType="text"
        android:textColor="@color/azulClaro"
        android:textColorHint="#e0e0e0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <EditText
        android:id="@+id/et_ApellidosUsuarioMod"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="@font/jackinpunt"
        android:hint="@string/RegistroU_Hint_Apellidos"
        android:inputType="text"
        android:textColor="@color/azulClaro"
        android:textColorHint="#e0e0e0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_NombreUsuarioMod" />

    <EditText
        android:id="@+id/et_TelfUsuarioMod"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="@font/jackinpunt"
        android:hint="@string/RegistroU_Hint_Telf"
        android:inputType="phone"
        android:textColor="@color/azulClaro"
        android:textColorHint="#e0e0e0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ApellidosUsuarioMod" />

    <EditText
        android:id="@+id/et_nuevaPassUsuarioMod"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="@font/jackinpunt"
        android:hint="@string/Ajustes_NuevaPass"
        android:inputType="textPassword"
        android:textColor="@color/azulClaro"
        android:textColorHint="#e0e0e0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_TelfUsuarioMod" />

    <EditText
        android:id="@+id/et_repNuevaPassUsuarioMod"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="@font/jackinpunt"
        android:hint="@string/Ajustes_RepNuevaPass"
        android:inputType="textPassword"
        android:textColor="@color/azulClaro"
        android:textColorHint="#e0e0e0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nuevaPassUsuarioMod" />

    <Button
        android:id="@+id/bt_ModUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#4a9d9c"
        android:fontFamily="@font/cinzel_font"
        android:onClick="modificarUsuario"
        android:text="@string/Ajustes_Boton"
        android:textColor="#afffff"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repNuevaPassUsuarioMod" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#00000000"
        android:onClick="mensajeAyuda"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_ayuda" />



</androidx.constraintlayout.widget.ConstraintLayout>