<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_fondo"
    tools:context=".Registros.RegistroEmpresasActivity">

    <TextView
        android:id="@+id/tv_RegistroUTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/cinzel_font"
        android:text="@string/RegistroE_Titulo"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="630dp"
        android:layout_marginTop="-25dp"
        android:scrollbarThumbVertical="@color/azulClaro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_RegistroUTitulo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/et_Vacio"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:textColorHint="#e0e0e0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_RegistroUTitulo" />

            <EditText
                android:id="@+id/et_NombreEmpresa"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:fontFamily="@font/jackinpunt"
                android:hint="@string/RegistroU_Hint_Nombre"
                android:inputType="text"
                android:textColor="@color/azulClaro"
                android:textColorHint="#e0e0e0"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_RegistroUTitulo" />

            <EditText
                android:id="@+id/et_CifEmpresa"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/jackinpunt"
                android:hint="@string/RegistroE_Hint_CIF"
                android:inputType="text"
                android:textColor="@color/azulClaro"
                android:textColorHint="#e0e0e0"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_NombreEmpresa" />

            <EditText
                android:id="@+id/et_telfEmpresa"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/jackinpunt"
                android:hint="@string/RegistroE_Hint_Telf"
                android:inputType="phone"
                android:textColor="@color/azulClaro"
                android:textColorHint="#e0e0e0"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_CifEmpresa" />

            <EditText
                android:id="@+id/et_DirEmpresa"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/jackinpunt"
                android:hint="@string/RegistroE_Hint_DirLocalidad"
                android:inputType="text"
                android:textColor="@color/azulClaro"
                android:textColorHint="#e0e0e0"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_telfEmpresa" />

            <Spinner
                android:id="@+id/sp_EspecialidadEmp"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="#00000000"
                android:entries="@array/RegistroE_Tipos"
                android:popupBackground="@color/marinoOscuro"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_DirEmpresa" />

            <EditText
                android:id="@+id/et_PassEmpresaMod"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/jackinpunt"
                android:hint="@string/RegistroE_Hint_PassE"
                android:inputType="textPassword"
                android:textColor="@color/azulClaro"
                android:textColorHint="#e0e0e0"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sp_EspecialidadEmp" />

            <EditText
                android:id="@+id/et_repPassEmpresaMod"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/jackinpunt"
                android:hint="@string/RegistroE_Hint_RepPassE"
                android:inputType="textPassword"
                android:textColor="@color/azulClaro"
                android:textColorHint="#e0e0e0"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_PassEmpresaMod" />

            <Button
                android:id="@+id/bt_seleccionarImagen"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/verdeMedio"
                android:fontFamily="@font/cinzel_font"
                android:onClick="abrirGaleria"
                android:text="@string/RegistroE_BtImagen"
                android:textColor="@color/azulClaro"
                android:textSize="16sp"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_repPassEmpresaMod" />

            <ImageView
                android:id="@+id/iv_logoEmpresaMod"
                android:layout_width="240dp"
                android:layout_height="194dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:contentDescription="Logo de la empresa al registrarse"
                android:src="@null"
                app:layout_constraintTop_toBottomOf="@+id/bt_seleccionarImagen" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#4a9d9c"
                android:fontFamily="@font/cinzel_font"
                android:onClick="registrarEmpresa"
                android:text="@string/RegistroU_BtRegistro"
                android:textColor="#afffff"
                android:textSize="16sp"
                app:cornerRadius="0dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_logoEmpresaMod" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>